# GameEngine

./: .clang-format  .clang_format  .codechecker_skip  .cproject  .cproject.bak  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  Dockerfile.clang  Dockerfile.gcc  Jenkinsfile  sonar-project.properties  sonarcloud.properties
.externalToolBuilders/: net.sourceforge.texlipse.builder.TexlipseBuilder.launch
samples/: CMakeLists.txt
samples/CameraTest/src/: CMakeLists.txt  CameraTest.cpp  CameraTest.hpp  CameraTestCore.cpp  CameraTestCore.hpp  main.cpp
samples/CameraTest/src/resources/: fragment.glsl  vertex.glsl
samples/CameraTest/src/resources/axes/: axes.mtl
samples/CameraTest/src/resources/cube/: cube.mtl
samples/CameraTest/src/resources/nanosuit/: glass_dif.png~
samples/CubeTest/src/: CMakeLists.txt  CubeTestCore.cpp  CubeTestCore.hpp  main.cpp
samples/EmmaTest/src/: CMakeLists.txt  main.cpp
samples/LogCTADTest/src/: CMakeLists.txt  main.cpp
samples/MineTest/src/: CMakeLists.txt  MineTest.cpp  MineTest.hpp  main.cpp
samples/MineTest/src/Blocks/: Block.cpp  Block.hpp  CMakeLists.txt  Cobblestone.cpp  Cobblestone.hpp
samples/MineTest/src/resources/grid/: grid.mtl  grid.png~
samples/MineTest/src/resources/nanosuit/: arm_showroom_ddn.png~  glass_ddn.png~  glass_dif.png~  hand_dif.png~  helmet_diff.png~  leg_dif.png~
samples/PluginTest/src/: CMakeLists.txt  PluginAPI.hpp  import_class.hpp  main.cpp
samples/PluginTest/src/plugin1/: CMakeLists.txt  plugin1.cpp
samples/SlangTest/src/: CMakeLists.txt  SlangTest.cpp  SlangTest.hpp  main.cpp
samples/SoundTest/src/: CMakeLists.txt  SoundTest.cpp  SoundTest.hpp  main.cpp
samples/SoundTest/src/resources/nanosuit/: arm_dif.png~  arm_showroom_spec.png~  body_dif.png~  body_showroom_ddn.png~  body_showroom_spec.png~  hand_showroom_ddn.png~  hand_showroom_spec.png~  helmet_showroom_ddn.png~  helmet_showroom_spec.png~  leg_showroom_ddn.png~
samples/dvd/src/: CMakeLists.txt  DVD.cpp  DVD.hpp  DVDCore.cpp  DVDCore.hpp  Dvd.cpp  Dvd.hpp  DvdCore.cpp  DvdCore.hpp  main.cpp
samples/dvd/src/resources/: fragment.glsl  vertex.glsl
samples/dvd_model/src/: CMakeLists.txt  DVD.cpp  DVD.hpp  DVDCore.cpp  DVDCore.hpp  Dvd.cpp  Dvd.hpp  DvdCore.cpp  DvdCore.hpp
samples/dvd_model/src/resources/dvd/: dvd.mtl
src/: Attribute.cpp  Attribute.hpp  CMakeLists.txt  CallbackHandler.cpp  CallbackHandler.hpp  CallbackRegistration.cpp  CallbackRegistration.tpp  Camera.cpp  Camera.hpp  FPSRenderer.cpp  FPSRenderer.hpp  GL.hpp  GameCore.cpp  GameCore.hpp  GameCore.tpp  InputHandler.cpp  InputHandler.hpp  Main_Loop.cpp  Main_Loop.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Primitive.hpp  Program.cpp  Program.hpp  Render.cpp  Render.hpp  Renderer.hpp  Renderer.tpp  ResourceDefs.hpp  Shader.cpp  Shader.hpp  ShaderPrograms.hpp  Singleton.cpp  Singleton.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  (+11 more)
src/2D/: CMakeLists.txt  FPSRenderer.cpp  FPSRenderer.hpp  FpsRenderer.cpp  FpsRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  TextRenderer.tpp
src/3D/: CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.tpp  Cube.cpp  Cube.hpp  Cube.tpp  Cubemap.cpp  Cubemap.hpp  Cubemap.tpp  EmbeddedIOHandler.cpp  EmbeddedIOHandler.hpp  EmbeddedIOStream.cpp  EmbeddedIOStream.hpp  Mesh.cpp  Mesh.hpp  Mesh.tpp  Model.cpp  Model.hpp  Model.tpp  PixelFormat.hpp  Primitive.hpp  Scene.hpp  Scene.tpp  Skybox.hpp  Skybox.tpp  Texture.cpp  Texture.hpp  Texture.tpp  Transformations.cpp  Transformations.hpp  Vertex.hpp
src/3D/resources/cube/: cube.mtl
src/GL/: Attribute.cpp  Attribute.hpp  CMakeLists.txt  GL.hpp  GLPrimitive.hpp  GLRenderer.cpp  GLRenderer.hpp  GLRenderer.tpp  GLWindowManager.cpp  GLWindowManager.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SlangShader.hpp  VBO.cpp  VBO.hpp  Vbo.cpp  Vbo.hpp  WindowManager.cpp  WindowManager.hpp
src/GL/resources/: cube.fs.glsl  cube.vs.glsl  default.fs.glsl  default.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  text.fs.glsl  text.vs.glsl
src/Logging/: CMakeLists.txt  Client.cpp  Client.hpp  Log.cpp  Log.hpp  Telemetry.cpp  Telemetry.hpp
src/Plugin/: CMakeLists.txt  Plugin.cpp  Plugin.hpp  PluginLoader.hpp  PluginManager.hpp
src/Sound/: CMakeLists.txt  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
src/Util/: Bind.hpp  CMakeLists.txt  Crtp.hpp  EnumBitMask.hpp  EnumComparisons.hpp  RNG.cpp  RNG.hpp  ResourceDefs.hpp  Rng.cpp  Rng.hpp  Singleton.hpp  UUID.hpp  Uuid.hpp
src/Vulkan/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.hpp
test/: CMakeLists.txt  main_test.cpp
test/2D/: 2D_test.cpp  CMakeLists.txt
test/3D/: 3D_test.cpp  CMakeLists.txt
test/GL/: CMakeLists.txt  GL_test.cpp
test/Sound/: CMakeLists.txt  Sound_test.cpp
test/Util/: CMakeLists.txt  UUID_test.cpp  Util_test.cpp
test/Vulkan/: CMakeLists.txt  Vulkan_test.cpp
